--- a/EjemploBaseDatos/app/src/main/res/layout/activity_ejemplo_base_datos.xml
+++ b/EjemploBaseDatos/app/src/main/res/layout/activity_ejemplo_base_datos.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context="com.example.hugtra.ejemplobasedatos.EjemploBaseDatos">
 
+    <menu>
+        <item android:id="@+id/menuaddcliente"
+            android:title="Añadir cliente" />
+    </menu>
+
+    <Button
+        android:id="@+id/btnaddcliente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Añadir cliente"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
+
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="276dp"
@@ -18,5 +41,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.055" />
+        app:layout_constraintVertical_bias="0.271" />
 </android.support.constraint.ConstraintLayout>
