--- a/ProyectoBocadillo/app/src/main/res/layout/spinner_helper.xml
+++ b/ProyectoBocadillo/app/src/main/res/layout/spinner_helper.xml
@@ -14,6 +14,9 @@
     <TextView android:id="@+id/Precio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView android:id="@+id/id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
