--- a/ListaTarea/app/src/main/res/layout/activity_main.xml
+++ b/ListaTarea/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,39 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <TextView android:layout_width="match_parent" android:text="@string/pending"  android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFAA00CC" android:textSize="22dp" android:typeface="serif"/>
-    <TextView android:id="@android:id/empty" android:layout_width="wrap_content" android:text="@string/lstNoElements"  android:layout_height="wrap_content" />
 
-    <ListView android:id="@android:id/list"
-        android:layout_width="fill_parent" android:layout_height="fill_parent" ></ListView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100px"
+        android:text="TAREAS DE "
+        android:gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:text="@string/pending"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="#FFAA00CC"
+        android:textSize="22dp"
+        android:typeface="serif"/>
+
+    <TextView
+        android:id="@android:id/empty"
+        android:layout_width="wrap_content"
+        android:text="@string/lstNoElements"
+        android:layout_height="wrap_content" />
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+    <FrameLayout
+        android:id="@+id/fragmentShow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible">
+
+    </FrameLayout>
+
 </LinearLayout>
