--- a/ProyectoBocadillo/app/src/main/res/menu/menu2.xml
+++ b/ProyectoBocadillo/app/src/main/res/menu/menu2.xml
@@ -4,4 +4,8 @@
         android:title="Acerca de"
         android:orderInCategory="100"
         />
+    <item android:id="@+id/Dibujo"
+        android:title="Dibujo"
+        android:orderInCategory="100"
+        />
 </menu>
