--- a/ProyectoRecuperacionPMM/app/src/main/res/layout/activity_profile.xml
+++ b/ProyectoRecuperacionPMM/app/src/main/res/layout/activity_profile.xml
@@ -11,35 +11,35 @@
         android:layout_height="wrap_content">
 
         <android.support.constraint.Barrier
-            android:id="@+id/fragment_profile_barrier"
+            android:id="@+id/activity_profile_barrier"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="140dp"
             android:layout_marginEnd="259dp"
             android:layout_marginStart="124dp"
             app:barrierDirection="right"
-            app:constraint_referenced_ids="fragment_profile_photo"
+            app:constraint_referenced_ids="activity_profile_photo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
-            android:id="@+id/fragment_profile_photo"
+            android:id="@+id/activity_profile_photo"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/ic_launcher_background"
-            app:layout_constraintBottom_toTopOf="@+id/fragment_profile_divider"
+            app:layout_constraintBottom_toTopOf="@+id/activity_profile_divider"
             app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription" />
 
         <TextView
-            android:id="@+id/fragment_profile_name"
+            android:id="@+id/activity_profile_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -51,11 +51,11 @@
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/fragment_profile_photo"
+            app:layout_constraintStart_toEndOf="@+id/activity_profile_photo"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <View
-            android:id="@+id/fragment_profile_divider"
+            android:id="@+id/activity_profile_divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider"
@@ -63,7 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_profile_barrier"/>
+            app:layout_constraintTop_toBottomOf="@+id/activity_profile_barrier"/>
     </android.support.constraint.ConstraintLayout>
 
     <TextView
@@ -80,7 +80,7 @@
         android:background="?android:attr/listDivider"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_profile_recycler"
+        android:id="@+id/activity_profile_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
